Fixed a small spacing issue.

--- a/css/styles.css
+++ b/css/styles.css
@@ -120,7 +120,7 @@ p {
 }
 
 .top-spacer {
-	height: 2em;
+	height: 2.5em;
 }
 
 .bottom-spacer {
